--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
-.bigcontainer {
+#bigcontainer {
 display: grid;
+grid-template-columns: 1fr 3fr; 
+height: 100vh;
+}
+
+#maincontent {
+    display: grid;
+    grid-template-rows: 1fr 5fr;
+}
+
+#content {
+    display: grid;
+    grid-template-columns: 2fr 2fr 1fr;
 }
