--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,120 @@
 display: grid;
 grid-template-columns: 1fr 3fr; 
 height: 100vh;
+
 }
 
 #maincontent {
     display: grid;
     grid-template-rows: 1fr 5fr;
+    
 }
 
 #content {
     display: grid;
-    grid-template-columns: 2fr 2fr 1fr;
+    grid-template-columns: 4fr 1fr; 
+    
+}
+
+#gridContent {
+    display: grid;
+    grid-template: 1fr 1fr 1fr / 1fr 1fr;
+    
+}
+
+#announcements {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+#header {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    box-shadow: 0px 8px 12px -5px #818A91;
+    height: 20vh;
+}
+    
+
+img {
+    height: 25px;
+    width: 25px;
+}
+
+#headerone {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr 1fr 2fr;
+}
+#headertwo {
+
+}
+#dashboard {
+    display: grid;
+    grid-auto-flow: row;
+    grid-template-rows: 1fr 3fr 3fr 3fr;
+    row-gap: 10px;
+    background-color: lightblue;
+    justify-content: start;
+    padding-left: 20px;
+   
+}
+
+
+#contentbox {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 6fr;
+    background-color: lightgrey;
+    
+}
+
+h2 {
+    height: 5vh;
+    padding-left: 10px;
+}
+
+#yourproject {
+    display: grid;
+    grid-template: 1fr 1fr 1fr / 1fr 1fr;
+    column-gap: 35px;
+    padding-left: 10px;
+}
+
+#announcements {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#announce {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+#contentbox p {
+ border: black solid 2px;
+ border-radius: 5px;
+ padding-top: 15px;
+ padding-left: 15px;
+}
+
+#maindashboard img {
+    height: 50px;
+    width: 50px;
+    
+}
+
+#maindashboard {
+    display: grid;
+    justify-self: space-between;
+    grid-template-columns: 1fr 5fr;
+}
+
+#home {
+    font-size: 30px;
+    
+}
+
+#settings {
+    font-size: 30px;
 }
