--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,22 @@
+
 #bigcontainer {
 display: grid;
 grid-template-columns: 1fr 3fr; 
 height: 100vh;
 
 }
+#trending p {
+   display: flex;
+   justify-content: start;
+   align-items: center;
+   padding: 10px; 
+   margin-left: 10px;
+   column-gap: 5px;
+}
 
 #maincontent {
     display: grid;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 1fr 7fr;
     
 }
 
@@ -32,21 +41,27 @@ height: 100vh;
     display: grid;
     grid-template-rows: 1fr 1fr;
     box-shadow: 0px 8px 12px -5px #818A91;
-    height: 20vh;
+    height: 15vh;
 }
-    
+   
+#headertwo h2 {
+    display: flex;
+    justify-content: start;
+    column-gap: 5px;
+}
 
 img {
-    height: 25px;
-    width: 25px;
+    height: 30px;
+    width: 30px;
 }
 
 #headerone {
     display: grid;
     grid-template-columns: 1fr 4fr 1fr 1fr 2fr;
+    padding-left: 15px;
 }
 #headertwo {
-
+    padding-left: 15px;
 }
 #dashboard {
     display: grid;
@@ -63,7 +78,7 @@ img {
 #contentbox {
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr 6fr;
+    grid-template-rows: 1fr 10fr;
     background-color: lightgrey;
     
 }
@@ -78,8 +93,16 @@ h2 {
     grid-template: 1fr 1fr 1fr / 1fr 1fr;
     column-gap: 35px;
     padding-left: 10px;
+    grid-row-gap: 35px;;
 }
 
+#yourproject div {
+    background-color: darkgray;
+    border: black solid 2px;
+    border-radius: 5px;
+    padding-top: 15px;
+    padding-left: 15px;
+}
 #announcements {
     display: grid;
     grid-template-rows: 1fr 1fr;
@@ -90,6 +113,16 @@ h2 {
 #announce {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 10px;
+}
+
+#announce div {
+    
+    background-color: darkgray;
+    border: black solid 2px;
+    border-radius: 5px;
+    row-gap: 15px;
+    padding-left: 15px;
 }
 
 #contentbox p {
@@ -109,7 +142,10 @@ h2 {
     display: grid;
     justify-self: space-between;
     grid-template-columns: 1fr 5fr;
+    padding: 0px;
+    align-items: center;
 }
+
 
 #home {
     font-size: 30px;
